--- a/styles/style.css
+++ b/styles/style.css
@@ -197,17 +197,6 @@ header {
   font-size: 3rem;
 }
 
-@keyframes slideIn {
-  from {
-    transform: translateY(20px);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
 .c-mainbox {
   display: flex;
   flex-direction: column;
@@ -215,7 +204,6 @@ header {
   text-align: center;
   padding: 20px 15px;
   overflow: hidden;
-  animation: slideIn 2s ease-out;
 }
 
 .container-img img {
@@ -418,6 +406,7 @@ button {
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-family: "Jorgey", sans-serif; ;
 }
 
 button:hover {
@@ -466,6 +455,7 @@ iframe {
 
 .about-text h1 {
   font-family: "Jorgey", sans-serif;
+  padding: 3rem 0;
 }
 
 .about-text p {
