--- a/styles/style.css
+++ b/styles/style.css
@@ -183,18 +183,27 @@ header {
 }
 
 .ingredients {
+  flex: 0 1 300px;
   height: 15rem;
   background-color: rgb(245, 196, 60);
   font-size: 2rem;
+  padding-top: 10px;
   padding-right: 40px;
-  padding-top: 40px;
   padding-left: 25px;
-  padding-bottom: 80px;
+}
+
+.container-box {
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ingredients-text p {
   font-family: "Jorgey", sans-serif;
   font-size: 3rem;
+  line-height: 1.5;
+
 }
 
 .c-mainbox {
@@ -202,18 +211,26 @@ header {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 20px 15px;
+  padding: 15px 15px;
   overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
+
 }
+
+.c-mainbox:hover {
+  background-color:rgb(244,244,244);
+  transform: rotate(-3deg) scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
+
 
 .container-img img {
   height: 8rem;
-}
-
-.container-box {
-  display: flex;
-  padding-left: 30px;
-  text-align: center;
 }
 
 .text {
@@ -251,7 +268,14 @@ header {
   text-align: center;
   padding: 1rem;
   width: 250px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.special-item:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 
 .special-item img {
   width: 100%;
@@ -659,3 +683,48 @@ button:hover {
 }
 
 /* ----------------------------------------Reservation.HTML------------------------------------------------------ */
+
+
+/* Extra large screens */
+@media (min-width: 1920px) {
+ 
+}
+
+/* Desktops */
+@media (min-width: 1200px) and (max-width: 1919px) {
+  /* CSS styles go here */
+}
+
+/* Laptops/Large tablets */
+@media (min-width: 992px) and (max-width: 1199px) {
+  /* CSS styles go here */
+}
+
+/* Small tablets */
+@media (min-width: 768px) and (max-width: 991px) {
+  /* CSS styles go here */
+}
+
+/* Extra small devices */
+@media (min-width: 481px) and (max-width: 767px) {
+  /* CSS styles go here */
+
+  .nav-link-hidden{
+    display: none;
+  }
+
+  #menu-icon{
+    display: block;
+    color: #ffff;
+    font-size: 30px;
+  }
+
+  .hero{
+    display: flex;
+  }
+}
+
+/* Mobile */
+@media (max-width: 480px) {
+  /* CSS styles go here */
+}
