--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  scroll-behavior: smooth;
 }
 
 html {
@@ -192,18 +193,51 @@ header {
   padding-left: 25px;
 }
 
-.container-box {
-  flex: 2;
+.container-box-wrapper {
+  position: relative;
+  width: 40%;
+  flex: 1;
   display: flex;
   justify-content: center;
+  overflow: hidden;
+}
+
+.container-box {
+  display: flex;
   align-items: center;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+}
+.container-box::-webkit-scrollbar {
+  display: none; 
+}
+
+
+
+.scroll-arrow {
+  border: none;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 24px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+}
+
+.left-arrow {
+  left: 10px;
+}
+
+.right-arrow {
+  right: 10px;
 }
 
 .ingredients-text p {
   font-family: "Jorgey", sans-serif;
   font-size: 3rem;
   line-height: 1.5;
-
 }
 
 .c-mainbox {
@@ -211,23 +245,16 @@ header {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 15px 15px;
-  overflow: hidden;
+  padding: 15px;
+  min-width: 200px;
   transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
-
 }
 
 .c-mainbox:hover {
-  background-color:rgb(244,244,244);
+  background-color: rgb(244, 244, 244);
   transform: rotate(-3deg) scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-
-
-
-
-
-
 
 .container-img img {
   height: 8rem;
@@ -237,6 +264,7 @@ header {
   font-family: "Jorgey", sans-serif;
   text-align: center;
 }
+
 
 /*---------------------------------------Specials---------------------------------------*/
 
@@ -306,12 +334,11 @@ header {
 /*---------------------------------------Specials---------------------------------------*/
 
 /*---------------------------------------Testimonials---------------------------------------*/
-
 #Reviews {
   padding: 6rem;
   background-color: #f9f9f9;
   text-align: center;
-  height: 35rem;
+  height: auto;
   font-family: "Jorgey", sans-serif;
 }
 
@@ -322,7 +349,9 @@ header {
 
 .testimonial-container {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
 }
 @keyframes hoverEffect {
   0% {
@@ -338,13 +367,12 @@ header {
 .testimonial {
   background-color: #fff;
   padding: 1rem;
-  margin: 0.5rem 2rem;
-  padding: 1rem 6rem;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 600px;
+  max-width: 250px;
   width: 100%;
   transition: all 0.3s ease-in-out;
+  box-sizing: border-box;
 }
 
 .testimonial:hover {
@@ -367,16 +395,14 @@ cite {
   font-weight: bold;
   color: rgb(240, 79, 16);
 }
-
 /*---------------------------------------Testimonials---------------------------------------*/
 
 /*---------------------------------------Contact-Form---------------------------------------*/
 
 .contact-main-container {
   padding-top: 4.4rem;
-  height: auto;
   background-color: #ccc;
-  padding: 3rem 17rem;
+  padding: 3rem;
 }
 
 .contact-form {
@@ -385,11 +411,12 @@ cite {
   border-radius: 8px;
   background-color: rgb(23, 23, 23);
   opacity: 0.77;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 .contact-container h2 {
   margin-bottom: 20px;
-  width: 100%;
   font-size: 1.8rem;
   color: white;
   font-family: "Jorgey", sans-serif;
@@ -430,12 +457,13 @@ button {
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  font-family: "Jorgey", sans-serif; ;
+  font-family: "Jorgey", sans-serif;
 }
 
 button:hover {
   background-color: rgb(255, 112, 60);
 }
+
 
 /*---------------------------------------Contact-Form---------------------------------------*/
 
@@ -450,6 +478,7 @@ button:hover {
   padding: 6rem 3rem;
   min-height: 56rem;
   display: flex;
+  flex-wrap: wrap;
   background-image: url(https://lovesomejerk.com/revslider-standalone/media/6256a-wallpaper.wiki-Free-HD-Chalkboard-Photos-PIC-WPD006400.jpg);
   gap: 20px;
   background-image: no-repeat;
@@ -467,6 +496,8 @@ iframe,
 iframe {
   border-radius: 15%;
   border: 5px solid black;
+  box-sizing: border-box;
+
 }
 
 .about-text {
@@ -692,43 +723,293 @@ button:hover {
 
 /* Desktops */
 @media (min-width: 1200px) and (max-width: 1919px) {
-  /* CSS styles go here */
+
 }
 
 /* Laptops/Large tablets */
 @media (min-width: 992px) and (max-width: 1199px) {
-  /* CSS styles go here */
+
 }
 
 /* Small tablets */
 @media (min-width: 768px) and (max-width: 991px) {
-  /* CSS styles go here */
-}
-
-/* Extra small devices */
-@media (min-width: 481px) and (max-width: 767px) {
-  /* CSS styles go here */
-
-  .nav-link-hidden{
+/* ---------------------------------------------Nav------------------------------------------- */
+  .nav-link-hidden {
     display: none;
+    position: absolute;
+    margin-top: 4.4rem;
+    left: 50%;
+    width: 80%; 
+    max-width: 400px;
+    background-color: #333;
+    opacity: 0.9;
+    z-index: 1;
+    transform: translateX(-50%); 
+  }
+
+  .nav-link-hidden.active {
+    display: block;
+  }
+
+  .nav-link-hidden li{
+    padding: 15px;
+    text-align: center;
   }
 
   #menu-icon{
     display: block;
     color: #ffff;
     font-size: 30px;
+    position: relative;
   }
 
+
+  iframe {
+    width: 100%; 
+    height: 400px; 
+    border: none; 
+    border-radius: 70px;
+    box-sizing: border-box;
+    
+    
+  }
+  
+
+/* ---------------------------------------------Hero------------------------------------------- */
+
   .hero{
-    display: flex;
+    flex-direction: column;
+    height: 65rem;
+  }
+
+  .hero-text{
+    order: 1;
+  }
+
+  .hero-img{
+    order: 2;
   }
 
   .hero-text h1{
+    font-size: 5.5rem;
+    margin-top: 2rem;
+  }
+
+  .hero-text p{
+    font-size:3rem;
+  }
+
+  /* -------------------------------------Entrees--------------------------------------------- */
+
+  .entree-items-container{
+    height: 110rem;
+  }
+
+  .patties-items-container{
+    height: 90rem;
+  }
+  
+
+
+
+}
+
+/* Extra small devices */
+@media (min-width: 481px) and (max-width: 767px) {
+ 
+
+  .nav-link-hidden {
+    display: none;
+    position: absolute;
+    margin-top: 4.4rem;
+    left: 50%;
+    width: 80%; 
+    max-width: 400px;
+    background-color: #333;
+    opacity: 0.9;
+    z-index: 1;
+    transform: translateX(-50%); 
+  }
+  .nav-link-hidden.active {
+    display: block;
+  }
+
+  .nav-link-hidden li{
+    padding: 15px;
+    text-align: center;
+  }
+
+  #menu-icon{
+    display: block;
+    color: #ffff;
+    font-size: 30px;
+    position: relative;
+  }
+
+  .hero{
+    flex-direction: column;
+    height: 58rem;
+  }
+
+  .hero-text{
+    order: 1;
+  }
+
+  .hero-img{
+    order: 2;
+  }
+
+  .hero-text h1{
+    font-size: 4rem;
+    margin-top: 2rem;
+  }
+  .hero-text p{
     font-size: 2rem;
   }
+
+/* -----------------------Ingredients--------------------- */
+  .ingredients {
+    flex: 0 1 100px;
+    height: 15rem;
+    background-color: rgb(245, 196, 60);
+    font-size: 2rem;
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-left: 25px;
+  }
+  
 }
 
 /* Mobile */
 @media (max-width: 480px) {
-  /* CSS styles go here */
+  /* --------------------------------------------Nav-------------------------------------------- */
+
+  .nav-link-hidden {
+    display: none;
+    position: absolute;
+    margin-top: 4.4rem;
+    left: 50%;
+    width: 80%; 
+    max-width: 400px;
+    background-color: #333;
+    opacity: 0.9;
+    z-index: 1;
+    transform: translateX(-50%); 
+  }
+  .nav-link-hidden.active {
+    display: block;
+  }
+
+  .nav-link-hidden li{
+    padding: 15px;
+    text-align: center;
+  }
+
+  #menu-icon{
+    display: block;
+    color: #ffff;
+    font-size: 30px;
+    position: relative;
+  }
+  .order-now button{
+    font-size: 15px;
+    margin-right: .6rem;
+  
+    padding: 14px 13px;
+
+  }
+
+  /* ---------------------------------------------Hero------------------------------------------- */
+
+  .hero{
+    flex-direction: column;
+    height: 52rem;
+  }
+
+  .hero-text{
+    order: 1;
+  }
+
+  .hero-img{
+    order: 2;
+  }
+
+  .hero-text h1{
+    font-size: 4rem;
+    margin-top: 2rem;
+  }
+  .hero-text p{
+    font-size: 2rem;
+  }
+
+/* -----------------------Ingredients--------------------- */
+  .ingredients {
+    flex: 0 1 100px;
+    height: 6rem;
+    background-color: rgb(245, 196, 60);
+    font-size: 2rem;
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-left: 25px;
+  }
+
+  .container-box-wrapper {
+    position: relative;
+    width: 20%;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+  .ingredients-text p {
+    font-family: "Jorgey", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+  
+  }
+
+  .container-img img {
+    height: 3rem;
+  }
+  .c-mainbox {
+    padding: 5px;
+  }
+
+  .text {
+    font-family: "Jorgey", sans-serif;
+    text-align: center;
+    font-size: 13px;
+  }
+  
+/*-----------------------------------------About.html----------------------------------- */
+
+  iframe {
+  width: 100%;
+  height: 400px; 
+  border-radius: 15%;
+  border: 5px solid black;
+  box-sizing: border-box;
+  display: block;
+  margin: 0;
+  padding: 0;
+  }
+
+  .about-text {
+    padding: 0; 
+  }
+/* -------------------------------------Entrees--------------------------------------------- */
+
+  .entree-items-container{
+    height: 210rem;
+  }
+
+  .patties-items-container{
+    height: 154rem;
+  }
+
+ 
+
+ 
+
 }
