--- a/styles/style.css
+++ b/styles/style.css
@@ -895,6 +895,10 @@ button:hover {
     padding-right: 40px;
     padding-left: 25px;
   }
+
+  .c-mainbox{
+    width: 100px;
+  }
   
 }
 
@@ -986,6 +990,10 @@ button:hover {
     line-height: 1.5;
   
   }
+  .c-mainbox{
+    width: 100px;
+  }
+  
 
   .container-img img {
     height: 3rem;
