--- a/styles/style.css
+++ b/styles/style.css
@@ -164,19 +164,7 @@ header {
 .btn-craving:hover {
   letter-spacing: 1px;
 }
-/* .home {
-    height: 100vh;
-    width: 100%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    background-image: url(https://i.postimg.cc/wj0L3Hdy/black-wood.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
 
-/* don't delete yet may still be helpful */
 
 /*---------------------------------------Ingredients---------------------------------------*/
 .container {
@@ -207,6 +195,7 @@ header {
   align-items: center;
   scroll-behavior: smooth;
   overflow-x: auto;
+  
 }
 .container-box::-webkit-scrollbar {
   display: none; 
@@ -232,6 +221,7 @@ header {
 
 .right-arrow {
   right: 10px;
+
 }
 
 .ingredients-text p {
@@ -248,6 +238,7 @@ header {
   padding: 15px;
   min-width: 200px;
   transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
+  z-index: 1;
 }
 
 .c-mainbox:hover {
@@ -896,15 +887,18 @@ button:hover {
     padding-left: 25px;
   }
 
-  .c-mainbox{
-    width: 100px;
-  }
-  
+
 }
 
 /* Mobile */
 @media (max-width: 480px) {
   /* --------------------------------------------Nav-------------------------------------------- */
+
+
+  .logo-pic {
+    height: 3rem;
+    margin-left: 1rem;
+  }
 
   .nav-link-hidden {
     display: none;
@@ -950,6 +944,7 @@ button:hover {
 
   .hero-text{
     order: 1;
+    margin-top: 1.3rem;
   }
 
   .hero-img{
@@ -986,20 +981,17 @@ button:hover {
 
   .ingredients-text p {
     font-family: "Jorgey", sans-serif;
-    font-size: 1rem;
+    font-size: .6rem;
     line-height: 1.5;
   
   }
-  .c-mainbox{
-    width: 100px;
-  }
-  
 
   .container-img img {
     height: 3rem;
   }
   .c-mainbox {
     padding: 5px;
+    min-width: 115px; 
   }
 
   .text {
