--- a/styles/style.css
+++ b/styles/style.css
@@ -981,7 +981,7 @@ button:hover {
 
   .ingredients-text p {
     font-family: "Jorgey", sans-serif;
-    font-size: .6rem;
+    font-size: 1.2rem;
     line-height: 1.5;
   
   }
