--- a/styles/style.css
+++ b/styles/style.css
@@ -195,12 +195,8 @@ header {
   align-items: center;
   scroll-behavior: smooth;
   overflow-x: auto;
-  
+ 
 }
-.container-box::-webkit-scrollbar {
-  display: none; 
-}
-
 
 
 .scroll-arrow {
@@ -213,6 +209,7 @@ header {
   top: 50%;
   transform: translateY(-50%);
   z-index: 2;
+  overflow: hidden;
 }
 
 .left-arrow {
@@ -457,6 +454,144 @@ button:hover {
 
 
 /*---------------------------------------Contact-Form---------------------------------------*/
+ 
+ .footer {
+  background-color:rgb(225, 222, 222);
+
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+  padding: 2rem;
+}
+
+.footer-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-section h2 {
+  color: #ff6f00;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  text-align: left;
+  width: 100%;
+  font-family:  "Jorgey", sans-serif;;
+}
+
+.footer-section a{
+  color: black;
+  font-family: "Okashi", sans-serif;
+}
+
+.footer-section a:hover{
+  color: #ff6f00;
+}
+
+.footer-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem; 
+}
+
+.footer-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+.footer-list a {
+  text-decoration: none;
+  color: black;
+  font-family: "Okashi", sans-serif;; 
+}
+
+.footer-list a:hover {
+  color: #ff6f00;
+}
+
+.brand-logo {
+  height: 5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0;
+}
+
+.social-media {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.social-media a {
+  margin: 0 0.5rem;
+  color: black;
+  font-size: 1.5rem;
+}
+
+.social-media a:hover {
+  color: #ff6f00;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 1rem 0;
+  background-color:rgb(33,33,32);
+  color: #fff;
+}
+
+.footer-links {
+  margin-top: 1rem;
+}
+
+.footer-links a {
+  text-decoration: none;
+  margin: 0 0.5rem;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .footer-container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .footer-links a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 0.5rem;
+    
+  }
+
+  .footer-section li{
+    font-size: 10px;
+  }
+
+  .footer-list li {
+    font-size: 10px;
+  }
+}
+
+
+
 
 /*---------------------------------------About.HTML---------------------------------------*/
 
@@ -1005,7 +1140,7 @@ button:hover {
   width: 100%;
   height: 400px; 
   border-radius: 15%;
-  border: 5px solid black;
+  border: none;
   box-sizing: border-box;
   display: block;
   margin: 0;
@@ -1025,7 +1160,22 @@ button:hover {
     height: 154rem;
   }
 
- 
+  .meal-info {
+    padding: 10px;
+    margin: 10px 0;
+  }
+
+  .meal-header {
+    font-size: 1.5rem;
+    padding: 1.5rem 0;
+  }
+
+  table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+
 
  
 
