--- a/styles/style.css
+++ b/styles/style.css
@@ -870,8 +870,88 @@ button:hover {
 
 /* Laptops/Large tablets */
 @media (min-width: 992px) and (max-width: 1199px) {
+  /* ---------------------------------------------Nav------------------------------------------- */
+
+  .order-now button{
+    font-size: 15px;
+    margin-right: .6rem;
+  
+    padding: 14px 13px;
+
+  }
+
+
+  iframe {
+    width: 100%; 
+    height: 400px; 
+    border: none; 
+    border-radius: 70px;
+    box-sizing: border-box;
+    
+    
+  }
+  
+
+/* ---------------------------------------------Hero------------------------------------------- */
+
+  .hero{
+    flex-direction: column;
+    height: 70rem;
+  }
+
+  .hero-text{
+    order: 1;
+  }
+
+
+  .hero-img{
+    order: 2;
+    height: 36rem;
+    margin-top: 1rem;
+  }
+
+  .hero-text h1{
+    font-size: 5.5rem;
+    margin-top: 4rem;
+  }
+
+  .hero-text p{
+    font-size:3.5rem;
+    padding-right: 8rem;
+  }
+  .btn-craving{
+
+    padding: 20px 27px;
+    font-size: 20px;
+    font-weight: 600;
+  }
+  /* -------------------------------------Entrees--------------------------------------------- */
+
+  .entree-items-container{
+    height: 90rem;
+  }
+
+  .patties-items-container{
+    height: 67rem;
+  }
+
+
+
+  /* -------------------------------------Reservations------------------------------------------- */
+
+
+  .reservation-container {
+    height:60rem;
+ 
+  }
+  
+
+
 
 }
+ 
+  
+
 
 /* Small tablets */
 @media (min-width: 768px) and (max-width: 991px) {
@@ -908,7 +988,6 @@ button:hover {
   .order-now button{
     font-size: 15px;
     margin-right: .6rem;
-  
     padding: 14px 13px;
 
   }
@@ -929,26 +1008,37 @@ button:hover {
 
   .hero{
     flex-direction: column;
-    height: 65rem;
+    height: 69rem;
   }
 
   .hero-text{
     order: 1;
+    font-size: 2rem;
   }
 
   .hero-img{
     order: 2;
+    height: 37rem;
   }
 
   .hero-text h1{
-    font-size: 5.5rem;
-    margin-top: 2rem;
+    font-size: 6rem;
+    margin-top: 5rem;
+    margin-right: 4rem;
   }
 
   .hero-text p{
-    font-size:3rem;
+    font-size:2.7rem;
   }
 
+ .btn-craving {
+    display: inline-block;
+    padding: 14px 26px;
+    background: rgb(240, 79, 16);
+    color: white;
+    font-size: 20px;
+    font-weight: 600;
+  }
   /* -------------------------------------Entrees--------------------------------------------- */
 
   .entree-items-container{
@@ -1108,6 +1198,8 @@ button:hover {
   .hero-text p{
     font-size: 2rem;
   }
+
+  
 
 /* -----------------------Ingredients--------------------- */
   .ingredients {
